study & exercise: union types

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
+    <style>
+      body {
+        background: #282828;
+        color: white;
+      }
+    </style>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
