--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         color: white;
       }
     </style>
+    <a href="http://www.google.com" id="anchor"></a>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
