Study & Exercise: interfaces

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
         color: white;
       }
     </style>
+    
     <a href="http://www.google.com" id="anchor"></a>
+
+    <a href="/" class="link">Home</a>
+    <a href="/products" class="link">Products</a>
+    <button class="link">Login</button>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
